--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "flowbite": "^1.6.6",
     "framer-motion": "^10.12.10",
     "next": "13.2.4",
     "react": "18.2.0",
