--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "13.2.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rotating-text": "^1.0.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
